# do-it-yourself-bar

./: CMakeLists.txt
package/: metadata.json
package/contents/ui/: main.qml
package/contents/ui/applet/: BlockButton.qml  BlockButtonTooltip.qml  Container.qml
package/contents/ui/common/: GrowingTextField.qml  TextTooltip.qml
package/contents/ui/config/: AppearanceTab.qml  BehaviorTab.qml  ColorButton.qml  HintIcon.qml  SectionHeader.qml
plugin/: DoItYourselfBar.cpp
